# PRCL

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/attack/: blend_backdoor.yaml  none.yaml  patch_backdoor.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  stl10.yaml
configs/defense/: none.yaml  prcl.yaml
configs/eval/: linear_probe.yaml
configs/logging/: default.yaml
configs/model/: resnet18.yaml  resnet50.yaml
configs/ssl/: simclr.yaml
docs/: PRCL_Intermediate_Report.tex  reproducibility.md  responsible_release.md  threat_model.md
notebooks/: colab_train.ipynb
scripts/: ablation.sh  report.py  reproduce_main_tables.sh  sanity_check.py  sweep_poison_ratio.sh  train.py
src/prcl/: __init__.py  config_schema.py
src/prcl/attacks/: builder.py  safety.py
src/prcl/attacks/adapters/: base.py  blend_backdoor.py  patch_backdoor.py
src/prcl/datasets/: cifar.py  stl10.py
src/prcl/defenses/prcl/: defense.py  negatives.py  pcf.py  probes.py  quarantine.py  robust_loss.py  thresholds.py
src/prcl/eval/: asr_eval.py  forensics.py  linear_probe.py
src/prcl/integritysuite/: aggregate.py  cards.py  run_manager.py  schemas.py
src/prcl/integritysuite/plots/: visualizations.py
src/prcl/ssl/: train_loop.py
src/prcl/ssl/backbones/: resnet.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/smoke/: test_smoke.py
tests/unit/: test_attacks.py  test_datasets.py  test_integritysuite.py  test_prcl_defense.py  test_run_manager.py  test_ssl_core.py  test_transforms.py
(+3 files in other folders)
