[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prcl"
version = "0.1.0"
description = "Poison-Resistant Contrastive Learning for Vision SSL + IntegritySuite Benchmark"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aayush Kumar"},
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.0",
    "tensorboard>=2.14",
]
wandb = ["wandb>=0.15"]
faiss = ["faiss-cpu>=1.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["prcl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "smoke: fast sanity checks",
    "integration: end-to-end pipeline tests",
    "gpu: requires GPU",
]

[tool.black]
line-length = 100
target-version = ["py310"]
